apps/media/prowlarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  ports:
    - port: 80
      targetPort: prowlarr
  selector:
    app.kubernetes.io/name: prowlarr
