apps/media/prowlarr/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: "prowlarr"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: "prowlarr"
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: prowlarr
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/part-of: "arr"
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 192.168.0.0/16
    - to:
        - ipBlock:
            cidr: 192.168.200.5/32
      ports:
        - protocol: TCP
          port: 9091
